style.css
body {
    background: #eeeeee;
    
    font-family: 'Inconsolata', monospace;
    font-size: 16px;
}

main {
    width: 50%;
    margin: 4rem auto;
    padding: 2rem;
    background: white;
    text-align: center;
    color: #660029;
}
main h1 {
    text-decoration: underline;
}
main p {
    color: darkslategray;
}

button {
    margin: 0 10px;
    padding: 1.5rem;

    border-radius: 10px;
    border: 0;

    background: #ff9933;

    text-decoration: none;
    outline: none;
    box-shadow: 2px 2px #DBDBDB;
    font-family: 'Inconsolata', monospace;
    font-size: 1rem;
    font-weight: bold;
    color: white;
}
button:hover {
    background: #e67300;
}

button:active {
    box-shadow: 0 5px #666;
    transform: translateY(4px);
}

.navigation button {
    font-size: .8rem;
    background: #2B56A2;
}

.navigation button:hover {
    background: #13336B;
}

.card {
    min-height: 300px;

    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;

    margin: 2rem auto 2rem auto;
    
    cursor: pointer;
    
    text-align: center;
    color: white;
    font-size: 1.5rem;

    transition: transform 1s;
    transform-style: preserve-3d;
    perspective: 30px;
}
.card h3 {
    margin-top: 0;

    text-decoration: underline;
    font-size: 1.5rem;
    color: blanchedalmond;
}

.card em {
    font-style: normal;
    font-weight: bold;
    color: #660029;
}

.card.is-flipped {
    transform: rotateY(180deg);
}

.card__face {
    position: absolute;
    width: 400px;
    min-height: 200px;
    padding: 2rem;
    border-radius: 0rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    font-weight: bold;

    backface-visibility: hidden;
}

.card__face--front {
    background: #e6005c;
    box-shadow: 5px 5px lightskyblue;
    
}

.card__face--back {
    background: green;
    box-shadow: 5px 5px lightpink;
    transform: rotateY(180deg);
}

.user-question form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 60%;
    margin: 0 auto;
    text-align: left;
}

.user-question form textarea {
    padding: 1rem;
    border: 1px solid darkgray;
    background: #F0F0F0;
}

.visible {
    display: block;
}

.invisible {
    display: none;
}

